# whatsapp-mcp

./: .env.example  .gitignore  LICENSE  README.md  connections.py  main.py  pyproject.toml  server.py
src/whatsapp_mcp/: __init__.py  server.py
src/whatsapp_mcp/tools/: __init__.py  interactive.py  messages.py  templates.py
src/whatsapp_mcp/utils/: __init__.py  client.py
tools/: README.md  check_template_approve_status.py  create_template_for_whatsapp_account.py  send_a_message_with_a_list_of_options.py  send_a_template_message_with_dynamic_parameters_.py  send_a_video_message.py  send_documents.py  send_image_using_url.py  send_text_message_and_templates.py  send_voice_message.py
